[gd_scene load_steps=21 format=3 uid="uid://codgfhbhs8ppm"]

[ext_resource type="Script" path="res://electricianshop.gd" id="1_3x0rg"]
[ext_resource type="Texture2D" uid="uid://cdtjf1kwmw7p1" path="res://art/wires.png" id="2_4p7gb"]
[ext_resource type="Texture2D" uid="uid://cjdiu5plq3um2" path="res://art/chip.png" id="3_o87w2"]
[ext_resource type="Texture2D" uid="uid://3b0f5ox18jb8" path="res://art/toolkit.png" id="4_exd8w"]
[ext_resource type="Texture2D" uid="uid://c0rw4jcr7yskf" path="res://art/toolbox.png" id="5_q4ll8"]
[ext_resource type="Theme" uid="uid://4hkej5w50ixp" path="res://scenes/pause_menu.tres" id="5_tumic"]
[ext_resource type="Texture2D" uid="uid://oybwqw8m3qur" path="res://art/shop back.png" id="6_kpxn4"]
[ext_resource type="Texture2D" uid="uid://bgahhllsskeh6" path="res://art/shop slot.png" id="7_kn3rj"]
[ext_resource type="Texture2D" uid="uid://cospvnhl8oemd" path="res://art/shop buycost.png" id="8_x0obq"]
[ext_resource type="AudioStream" uid="uid://cyh4xt361r2s2" path="res://760701__bigvegie__tipitipiwawa.wav" id="10_b4g7f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_18702"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u50bb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fkre8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gahru"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_51cpp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_up8s2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d7pa4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_upteh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5dbe7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gjpji"]

[node name="electricianshop" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 71.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.5, 3.5)
script = ExtResource("1_3x0rg")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
z_index = 12
custom_minimum_size = Vector2(2.08165e-12, 80)
layout_mode = 2
offset_left = 51.0
offset_top = 151.0
offset_right = 374.0
offset_bottom = 293.0
scale = Vector2(0.333, 0.333)
theme_override_font_sizes/normal_font_size = 35
theme_override_font_sizes/bold_font_size = 1
text = "Required items:
1x Gold"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
z_index = 12
custom_minimum_size = Vector2(2.08165e-12, 80)
layout_mode = 2
offset_left = 171.714
offset_top = 150.857
offset_right = 507.714
offset_bottom = 292.857
scale = Vector2(0.333, 0.333)
theme_override_font_sizes/normal_font_size = 35
theme_override_font_sizes/bold_font_size = 1
text = "Required items:
2x Gold + 2x Wire"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
z_index = 12
custom_minimum_size = Vector2(2.08165e-12, 80)
layout_mode = 2
offset_left = 292.286
offset_top = 150.857
offset_right = 639.286
offset_bottom = 294.857
scale = Vector2(0.333, 0.333)
theme_override_font_sizes/normal_font_size = 35
theme_override_font_sizes/bold_font_size = 1
text = "Required items:
5x Stick + 2x Cobalt"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
z_index = 12
custom_minimum_size = Vector2(2.08165e-12, 80)
layout_mode = 2
offset_left = 410.571
offset_top = 153.429
offset_right = 855.571
offset_bottom = 337.429
scale = Vector2(0.333, 0.333)
theme_override_font_sizes/normal_font_size = 33
theme_override_font_sizes/bold_font_size = 1
text = "Required items:
2x Gold Plate + 4x Cobalt"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
z_index = 1
layout_mode = 0
offset_left = 44.0
offset_top = 25.0
offset_right = 536.0
offset_bottom = 244.0
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(110, 79.225)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2
texture = ExtResource("2_4p7gb")

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_18702")
theme_override_styles/hover = SubResource("StyleBoxEmpty_u50bb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fkre8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gahru")
theme_override_styles/focus = SubResource("StyleBoxEmpty_51cpp")
text = "BUY"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(110, 2.08165e-12)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2
texture = ExtResource("3_o87w2")

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="chipbutton" type="Button" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_18702")
theme_override_styles/hover = SubResource("StyleBoxEmpty_u50bb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fkre8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gahru")
theme_override_styles/focus = SubResource("StyleBoxEmpty_51cpp")
text = "BUY"

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(110, 2.08165e-12)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2
texture = ExtResource("4_exd8w")

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="toolkitbutton" type="Button" parent="HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_18702")
theme_override_styles/hover = SubResource("StyleBoxEmpty_u50bb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fkre8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gahru")
theme_override_styles/focus = SubResource("StyleBoxEmpty_51cpp")
text = "BUY"

[node name="VBoxContainer4" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer4"]
custom_minimum_size = Vector2(110, 185)
layout_mode = 2

[node name="toolboxbutton" type="Button" parent="HBoxContainer/VBoxContainer4"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
theme = ExtResource("5_tumic")
theme_override_styles/normal = SubResource("StyleBoxEmpty_up8s2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_d7pa4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_upteh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5dbe7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gjpji")
text = "BUY"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_top = -20.0
offset_right = 548.0
offset_bottom = 328.0
texture = ExtResource("6_kpxn4")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 50

[node name="NinePatchRect5" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 164.0
offset_top = -131.0
offset_right = 566.0
offset_bottom = 262.0
texture = ExtResource("7_kn3rj")

[node name="NinePatchRect4" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 404.0
offset_top = -130.0
offset_right = 806.0
offset_bottom = 263.0
texture = ExtResource("7_kn3rj")

[node name="NinePatchRect3" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 284.0
offset_top = -131.0
offset_right = 686.0
offset_bottom = 262.0
texture = ExtResource("7_kn3rj")

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = -130.0
offset_right = 446.0
offset_bottom = 263.0
texture = ExtResource("7_kn3rj")

[node name="NinePatchRect10" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 404.0
offset_top = -9.14286
offset_right = 802.0
offset_bottom = 388.857
texture = ExtResource("8_x0obq")

[node name="NinePatchRect11" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 403.714
offset_top = -67.4286
offset_right = 801.714
offset_bottom = 330.571
texture = ExtResource("8_x0obq")

[node name="NinePatchRect12" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 284.0
offset_top = -9.0
offset_right = 682.0
offset_bottom = 389.0
texture = ExtResource("8_x0obq")

[node name="NinePatchRect13" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 284.0
offset_top = -67.0
offset_right = 682.0
offset_bottom = 331.0
texture = ExtResource("8_x0obq")

[node name="NinePatchRect9" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 164.0
offset_top = -9.0
offset_right = 562.0
offset_bottom = 389.0
texture = ExtResource("8_x0obq")

[node name="NinePatchRect8" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 164.286
offset_top = -66.8571
offset_right = 562.286
offset_bottom = 331.143
texture = ExtResource("8_x0obq")

[node name="NinePatchRect7" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = -9.0
offset_right = 442.0
offset_bottom = 389.0
texture = ExtResource("8_x0obq")

[node name="NinePatchRect6" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = -67.0
offset_right = 442.0
offset_bottom = 331.0
texture = ExtResource("8_x0obq")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
offset_left = 418.571
offset_top = 34.0
offset_right = 498.571
offset_bottom = 114.0
texture = ExtResource("5_q4ll8")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_b4g7f")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/chipbutton" to="." method="_on_chipbutton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer3/toolkitbutton" to="." method="_on_toolkitbutton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer4/toolboxbutton" to="." method="_on_toolboxbutton_pressed"]
